# WSL-DistroLauncher

./: NEWS  configure.ac  update-files.sh
DistroLauncher/: DistroLauncher.rc  Helpers.cpp  Makefile.am  MyLinuxDistroLauncher.cpp  MyLinuxDistroLauncher.hpp  messages.mc  stdafx.h  wslapi.h
